force-app/main/default/objects/Account_Number_Settings__mdt/Account_Number_Settings__mdt.object-meta.xml
<CustomObject>
    <label>Account Number Settings</label>
    <pluralLabel>Account Number Settings</pluralLabel>
</CustomObject>