force-app/main/default/objects/Account_Number_Settings__mdt/fields/Last_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Last_Account_Number__c</fullName>
    <description>The last account number assigned to an account</description>
    <inlineHelpText>The last account number assigned to an account</inlineHelpText>
    <label>Last Account Number</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>