force-app/main/default/objects/Account_Number_Settings__mdt/fields/Prefix__c.field-meta.xml
<CustomField>
    <fullName>Prefix__c</fullName>
    <description>The prefix for the generated account number</description>
    <inlineHelpText>The prefix for the generated account number</inlineHelpText>
    <label>Prefix</label>
    <length>1</length>
    <type>Text</type>
</CustomField>