force-app/main/default/objects/Account_Number_Settings__mdt/fields/Size__c.field-meta.xml
<CustomField>
    <fullName>Size__c</fullName>
    <defaultValue>6</defaultValue>
    <description>The number of characters in the generated Account Number</description>
    <inlineHelpText>The number of characters in the generated Account Number</inlineHelpText>
    <label>Size</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>